testsuite/poke.pkl/array-type-diag-1.pk
/* { dg-do compile } */

type foo = int[-1];  /* { dg-error "" } */
